--- a/src/project_ivf_flow/crews/data_preprocessing_and_analysis/config/tasks.yaml
+++ b/src/project_ivf_flow/crews/data_preprocessing_and_analysis/config/tasks.yaml
@@ -1,17 +1,38 @@
-research_task:
+data_cleaning_task:
   description: >
-    Conduct a thorough research about {topic}
-    Make sure you find any interesting and relevant information given
-    the current year is {current_year}.
+    Clean and prepare the fertility treatment dataset for analysis.
+    Your responsibilities include:
+    - Remove formatting inconsistencies (extra spaces, symbols)
+    - Convert percentages to decimal format
+    - Handle missing values appropriately
+    - Normalize date formats for years 1991-2022
+    - Create a unified dataset structure
+    Ensure all data transformations are documented and reversible.
   expected_output: >
-    A list with 10 bullet points of the most relevant information about {topic}
-  agent: researcher
-
-reporting_task:
-  description: >
-    Review the context you got and expand each topic into a full section for a report.
-    Make sure the report is detailed and contains any and all relevant information.
-  expected_output: >
-    A fully fledged report with the main topics, each with a full section of information.
+    A comprehensive data cleaning package including:
+    1. Clean CSV files with standardized formatting
+    2. Data quality report detailing all transformations performed
+    3. Schema documentation describing the final dataset structure
+    4. Summary of missing values and how they were handled
     Formatted as markdown without '```'
-  agent: reporting_analyst
+  agent: data_cleaner
+
+data_validation_task:
+  description: >
+    Validate the cleaned fertility treatment data for integrity and identify any anomalies.
+    Your responsibilities include:
+    - Check for logical inconsistencies (e.g., birth rate > pregnancy rate)
+    - Verify year continuity across the range 1991-2022
+    - Detect statistical outliers in success rates
+    - Validate age group distributions
+    - Compare and analyze Fresh vs Frozen cycle patterns
+    - Ensure data meets quality standards for analysis
+  expected_output: >
+    A comprehensive data validation report including:
+    1. Data quality metrics (completeness, accuracy, consistency)
+    2. Detailed anomaly report with flagged issues
+    3. Validation checklist confirming all quality checks passed
+    4. Statistical summary of Fresh vs Frozen cycle comparisons
+    5. Recommendations for data usage and any limitations
+    Formatted as markdown without '```'
+  agent: data_validator
